--- a/src/app/championnat/championnat.component.html
+++ b/src/app/championnat/championnat.component.html
@@ -10,12 +10,12 @@
       <mat-form-field fxFlex="100">
         <input matInput placeholder="Search League" aria-label="League" [matAutocomplete]="auto" [formControl]="leagueCtrl">
         <mat-icon matSuffix>search</mat-icon>
-        <mat-autocomplete #auto="matAutocomplete">
+        <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
           <mat-option
             *ngFor="let league of filteredLeagues | async"
             [routerLink]="['./teams', league.strLeague]"
             [value]="league">
-              <span>{{league.strLeague}}</span>
+              <span>{{ league.strLeague }}</span>
           </mat-option>
         </mat-autocomplete>
       </mat-form-field>
