--- a/src/app/teams/teams.component.html
+++ b/src/app/teams/teams.component.html
@@ -9,7 +9,7 @@
 </ng-template>
 
 <div fxLayout="row wrap" *ngIf="teams | async; let teams; else loading" >
-  <div fxFlex="50"
+  <div fxFlex="50" fxFlex.lg="25" fxFlex.xl="20" fxFlex.md="33"
     *ngFor="let team of teams"
     [ngStyle]="{'padding':'15px'}"
     fxLayoutAlign="center center">
