--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -1,7 +1,7 @@
 <!-- <pre>{{ players | async | json }}</pre> -->
 
 <mat-toolbar>
-  <button mat-flat-button (click)="goBack()">
+  <button mat-flat-button (click)="goBack()" [ngStyle]="{ 'padding-right':'30px' }">
       <!-- [routerLink]="['./../../../']" -->
     <i class="material-icons">chevron_left</i>
     <span>Back &nbsp;&nbsp;</span>
@@ -17,7 +17,6 @@
   <div *ngFor="let player of players" 
     fxFlex="100" fxFlex.lg="25" fxFlex.xl="20" fxFlex.md="33"
     [ngStyle]="{'background-color':'#eee', 'margin':'10px 0'}">
-    <!-- [ngStyle.gt-md]="{'margin':'1px'}"> -->
       <div fxFlex="30">
           <img *ngIf="player.strCutout" [src]="player.strCutout">
           <img *ngIf="!player.strCutout&&player.strThumb" [src]="player.strThumb">
